--- a/image.html
+++ b/image.html
@@ -20,15 +20,15 @@ font-family: timesnewroman;
 		<button>SUbmit</button>
 	</form>
 	<div>
-	<h1> mY webPage</h1>
+	<h1> MY WebPage</h1>
 
-	<p>fdkjsanfkjdsfkjdsnfkjdsn</p>
+	<p>One</p>
 
-	<p>fdkjsanfkjdsfkjdsnfkjdsn</p>
+	<p>Two</p>
 
-	<p>fdkjsanfkjdsfkjdsnfkjdsn</p>
+	<p>Three</p>
 
-	<p>fdkjsanfkjdsfkjdsnfkjdsn</p>
+	<p>Four</p>
 </div>
 </body>
 
